# line_follower

./: CMakeLists.txt  README.md  package.xml
include/line_follower/: LineDetect.h  VelCmdRobot.h
launch/: line_follower.launch
scripts/: follerw.py  follower.py  pubopencv.py  readme.md  readme.txt
src/: LineDetect.cpp  VelCmdRobot.cpp  detect.cpp  motion_node.cpp
